@@ -21,6 +21,13 @@ class CallsControllerTest extends FeatureTestCase
         'updated_at',
     ];
 
+    protected $jsonDashboardStructure = [
+        'id',
+        'called_at',
+        'name',
+        'contact_id',
+    ];
+
     public function test_it_gets_the_list_of_calls()
     {
         $user = $this->signin();
@@ -47,6 +54,35 @@ class CallsControllerTest extends FeatureTestCase
         $this->assertCount(
             10,
             $response->decodeResponseJson()['data']
+        );
+    }
+
+    public function test_dashboard_calls()
+    {
+        $user = $this->signin();
+
+        $contact = factory(Contact::class)->create([
+            'account_id' => $user->account_id,
+            'first_name' => 'Éric',
+            'last_name' => 'Çezt',
+        ]);
+
+        factory(Call::class, 10)->create([
+            'account_id' => $user->account_id,
+            'contact_id' => $contact->id,
+        ]);
+
+        $response = $this->json('GET', '/dashboard/calls');
+
+        $response->assertStatus(200);
+
+        $response->assertJsonStructure([
+            '*' => $this->jsonDashboardStructure,
+        ]);
+
+        $this->assertCount(
+            10,
+            $response->decodeResponseJson()
         );
     }
 }
