@@ -8,6 +8,7 @@ UNRELEASED CHANGES:
 * Fix subscription plan display
 * Fix dashboard calls display
 * Fix tags getting error
+* Fix contact getIncompleteName to work with UTF-8 last_name characters
 
 RELEASED VERSIONS:
 
